fix(curve): fix z-index attribute

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -56,7 +56,7 @@
   width: 100%;
   padding: 0.5rem;
   text-align: center;
-  z-index: 100;
+  z-index: 200;
   position: absolute;
   top: 0;
 }
@@ -65,7 +65,7 @@
   width: 100%;
   max-width: 400px;
   padding: 0 1rem;
-  z-index: 100;
+  z-index: 200;
   position: relative;
 }
 
@@ -135,7 +135,6 @@
   font-weight: bold;
 }
 
-
 .edc-pg--media {
   background-color: magenta;
   position: relative;
@@ -143,6 +142,10 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+
+.edc-pg--media .edc-pg--container {
+  z-index: 100;
 }
 
 .edc-pg--avatar {
@@ -158,7 +161,7 @@
 }
 
 .edc-pg--curve {
-  z-index: 101;
+  z-index: 110;
   position: absolute;
   bottom: -1px;
 }
